// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches expected output: deprecatedAlias.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  alias: fieldDeprecated1
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
💔 1x The field QueryRoot.fieldDeprecated1 is deprecated. Use field "fieldString" instead.
`;

exports[`matches expected output: multipleDeprecated.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  fieldDeprecated1
  x: fieldDeprecated2
  y: fieldDeprecated2
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
💔 1x The field QueryRoot.fieldDeprecated1 is deprecated. Use field "fieldString" instead.
💔 2x The field QueryRoot.fieldDeprecated2 is deprecated. Use field "fieldString" instead.
`;

exports[`matches expected output: simple.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  fieldString
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
PASSED ✅
`;

exports[`matches expected output: simpleWithDeprecated.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
{
  fieldString
  fieldDeprecated1
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
💔 1x The field QueryRoot.fieldDeprecated1 is deprecated. Use field "fieldString" instead.
`;
